--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <h2>Les 1: FTP / Filezilla / Ma Cloud hosting</h3>
         <ul>
             <li><a href="JavascriptDatum/index.html">Javascript datum</a></li>
-            <li>Javascript Achievement</li>
+            <li><a href="Rekenmachine/Rekenmachine.html">Javascript rekenmachine</a></li>
 
         </ul>
         <hr>
