added checkerboard link and checkerboard

--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
         <h2>Les 1: FTP / Filezilla / Ma Cloud hosting</h3>
         <ul>
             <li><a href="JavascriptDatum/index.html">Javascript datum</a></li>
-            <li><a href="Rekenmachine/Rekenmachine.html">Javascript rekenmachine</a></li>
+            <li><a href="JS-Turtle-master/Demo.html">Javascript rekenmachine</a></li>
 
         </ul>
         <hr>
         <h2>Les 2: HTML5</h3>
         <ul>
-            <li>Javascript Achievement</li>
-            <li>Javascript Achievement</li>
+            <li><a href="Rekenmachine/Rekenmachine.html">Javascript turtle</a></li>
+            <li><a href="Checkerboard/Checkerbord.html">Checkerboard</a></li>
             <li>...</li>
         </ul>
         <hr>
         <h2>Les 3: Les 3 JS Date</h3>
         <ul>
-            <li>Javascript Achievement</li>
+            <li><a href="F1M2-JS-Javascript-3-Arrays-Txt2speech-main/index.html">Javascript TextToSpeach</a></li>
             <li>Javascript Achievement</li>
             <li>...</li>
         </ul>
