added lesson6 assignment

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <h2>Les 3: Les 3 JS Date</h3>
         <ul>
             <li><a href="F1M2-JS-Javascript-3-Arrays-Txt2speech-main/index.html">Javascript TextToSpeach</a></li>
-            <li>Javascript Achievement</li>
+            <li><a href="MakeAScene/Index.html">Make a Scene</a></li>
             <li>...</li>
         </ul>
         <hr>
@@ -75,7 +75,7 @@
         <hr>
         <h2>Les 6: Modulo</h3>
         <ul>
-            <li>Javascript Achievement</li>
+            <li><a href="To-Do-list/index.html"></a></li>
             <li>Javascript Achievement</li>
             <li>...</li>
         </ul>
