added clickable button for lesson 6

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
         <hr>
         <h2>Les 6: Modulo</h3>
         <ul>
-            <li><a href="To-Do-list/index.html"></a></li>
+            <li><a href="To-Do-list/index.html">To-Do-List</a></li>
             <li>Javascript Achievement</li>
             <li>...</li>
         </ul>
