--- a/index.html
+++ b/index.html
@@ -61,14 +61,14 @@
         <hr>
         <h2>Les 4: Document Object Model (DOM)</h3>
         <ul>
-            <li>Javascript Achievement</li>
+            <li><a href="ma-webxr-master/index.html">WebXRDemo</a></li>
             <li>Javascript Achievement</li>
             <li>...</li>
         </ul>
         <hr>
         <h2>Les 5: Functions / Events</h3>
         <ul>
-            <li>Javascript Achievement</li>
+            <li><a href="Scroll-on-me/index.html"></a> ScrollOnMe</li>
             <li>Javascript Achievement</li>
             <li>...</li>
         </ul>
