fixed all not working links

--- a/index.html
+++ b/index.html
@@ -68,14 +68,14 @@
         <hr>
         <h2>Les 5: Functions / Events</h3>
         <ul>
-            <li><a href="Scroll-on-me/index.html"></a> ScrollOnMe</li>
+            <li><a href="Scroll-on-me/index.html">ScrollOnMe</a></li>
             <li>Javascript Achievement</li>
             <li>...</li>
         </ul>
         <hr>
         <h2>Les 6: Modulo</h3>
         <ul>
-            <li><a href="To-Do-List/index.html">To-Do-List</a></li>
+            <li><a href="ToDoList/index.html">To-Do-List</a></li>
             <li>Javascript Achievement</li>
             <li>...</li>
         </ul>
